trying to fix overflow

--- a/src/styles/LinkInBio.module.css
+++ b/src/styles/LinkInBio.module.css
@@ -15,7 +15,7 @@ div.LinkInBio {
     width: 100%;
 
     img {
-      max-width: 20rem;
+      max-width: 16rem;
       max-height: auto;
     }
   }
